[package]
name = "gringron_chain"
version = "5.2.0-beta.3"
authors = ["GrinGron Developers <mimblewimble@lists.launchpad.net>"]
description = "Chain implementation for gringron, a simple, private and scalable cryptocurrency implementation based on the Mimblewimble chain format."
license = "Apache-2.0"
repository = "https://github.com/groncoin/gringron"
keywords = [ "crypto", "gringron", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
bit-vec = "0.6"
bitflags = "1"
byteorder = "1"
croaring = "0.4.6"
enum_primitive = "0.1"
log = "0.4"
serde = "1"
serde_derive = "1"
thiserror = "1"
chrono = "0.4.11"
lru-cache = "0.1"
lazy_static = "1"

gringron_core = { path = "../core", version = "5.2.0-beta.3" }
gringron_keychain = { path = "../keychain", version = "5.2.0-beta.3" }
gringron_store = { path = "../store", version = "5.2.0-beta.3" }
gringron_util = { path = "../util", version = "5.2.0-beta.3" }

[dev-dependencies]
env_logger = "0.7"
rand = "0.6"
