[package]
name = "gringron_config"
version = "5.2.0-beta.3"
authors = ["GrinGron Developers <mimblewimble@lists.launchpad.net>"]
description = "Configuration for gringron, a simple, private and scalable cryptocurrency implementation based on the Mimblewimble chain format."
license = "Apache-2.0"
repository = "https://github.com/groncoin/gringron"
keywords = [ "crypto", "gringron", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
rand = "0.6"
serde = "1"
serde_derive = "1"
toml = "0.5"
dirs = "2.0"

gringron_core = { path = "../core", version = "5.2.0-beta.3" }
gringron_servers = { path = "../servers", version = "5.2.0-beta.3" }
gringron_p2p = { path = "../p2p", version = "5.2.0-beta.3" }
gringron_util = { path = "../util", version = "5.2.0-beta.3" }

[dev-dependencies]
pretty_assertions = "0.6.1"
