[package]
name = "gringron_pool"
version = "5.2.0-beta.3"
authors = ["GrinGron Developers <mimblewimble@lists.launchpad.net>"]
description = "Chain implementation for gringron, a simple, private and scalable cryptocurrency implementation based on the Mimblewimble chain format."
license = "Apache-2.0"
repository = "https://github.com/groncoin/gringron"
keywords = [ "crypto", "gringron", "mimblewimble" ]
workspace = '..'
edition = "2018"

[dependencies]
blake2-rfc = "0.2"
rand = "0.6"
serde = "1"
serde_derive = "1"
thiserror = "1"
log = "0.4"
chrono = "0.4.11"

gringron_core = { path = "../core", version = "5.2.0-beta.3" }
gringron_keychain = { path = "../keychain", version = "5.2.0-beta.3" }
gringron_util = { path = "../util", version = "5.2.0-beta.3" }

[dev-dependencies]
gringron_chain = { path = "../chain", version = "5.2.0-beta.3" }
