[package]
name = "gringron_util"
version = "5.2.0-beta.3"
authors = ["GrinGron Developers <mimblewimble@lists.launchpad.net>"]
description = "Simple, private and scalable cryptocurrency implementation based on the Mimblewimble chain format."
license = "Apache-2.0"
repository = "https://github.com/groncoin/gringron"
keywords = [ "crypto", "gringron", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
backtrace = "0.3"
base64 = "0.12"
byteorder = "1"
lazy_static = "1"
rand = "0.6"
serde = "1"
serde_derive = "1"
log4rs = { version = "0.12", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
log = "0.4"
walkdir = "2"
zip = { version = "0.5.11", default-features = false }
parking_lot = "0.10"
zeroize = { version = "1.1", features =["zeroize_derive"] }

[dependencies.gringron_secp256k1zkp]
#git = "https://github.com/groncoin/rust-secp256k1-zkp"
#tag = "gringron_integration_29"
#path = "../../rust-secp256k1-zkp"
version = "0.7.12"
features = ["bullet-proof-sizing"]
